Add "<meta charset="UTF-8" />" in line-number 4.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" dir="ltr">
 <head>
+  <meta charset="UTF-8" />
 <title>Zaquant&#8482; | Dashboard</title>
 <link rel="stylesheet" type="text/css" href="display.css" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
