Line no. 5, change <title> tags from "Zaquant" to "Test - Responsive".

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8" />
-<title>Zaquant&#8482; | Dashboard</title>
+<title>Responsive&#8482; | Test</title>
 <link rel="stylesheet" type="text/css" href="display.css" />
 <link rel="icon" href="favicon.ico" type="image/x-icon" />
 <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
